[package]
name = "ws2tcp-local-core"
version = "0.1.2"
edition = "2024"
description = "Core proxy library for ws2tcp-local."
license = "MIT"
repository = "https://github.com/uglykitty/ws2tcp-local-core"
readme = "README.md"
keywords = ["proxy", "websocket", "tcp", "http"]
categories = ["network-programming"]
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "README.zh-CN.md",
    "CHANGELOG.md",
    "src/**",
]

[lib]
name = "ws2tcp_local_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
futures-util = "0.3"
httpdate = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["rt", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
